[package]
name = "RustTest"
description = "Testing out rust"
version = "0.1.0"
authors = ["marcus8448"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/marcus8448/rust_test/"
license = "LGPL-3-only"
license-file = "LICENSE"
publish = false

[dependencies]
rand = "0.8.3"
substring = "1.4.0"
